HTML and CSS for artist pages

--- a/home.html
+++ b/home.html
@@ -9,10 +9,10 @@
         <img src="http://www.trbimg.com/img-5a14a5d4/turbine/fl-sb-hollywood-murals-street-art-20171103" alt="Norway" style="width:100%;">
         <div class="centered">We connect artists to communities.</div>
       </div>
-      <p id="desc">Many times, artists, owners, and communities can't
-        connect. This deters the development and presence of street are in communities which demand it.
+      <p id="desc">Many times, artists, owners, and communities can'tconnect.
+        This deters the development and presence of street are in communities which demand it.
       </p>
-      <h1>GET INVOLVED</h1>
+      <h1>GET INVOLVED:</h1>
       <p>I am an <a href = "artist.html">Artist<a></p>
       <p>I am an <a href = "owner.html">Owner<a></p>
       <p>I am a <a href = "url">Supporter<a></p>
