Deleted placeholders and used paragraphs instead

--- a/artist.html
+++ b/artist.html
@@ -7,10 +7,10 @@
       <h1>I am an Artist</h1>
       <p>Please provide your contact information so other supporters of this cause can get in touch with you.</p>
       <div class="input">
-        <input placeholder="Name (first and last)" size="40"><br>
-        <input placeholder="Phone Number" size="40"><br>
-        <input placeholder="Email" size="40"><br>
-        <p id="painting">Preferred Painting Style (Don't worry if you don's see your painting style, just choose other!)</p>
+        <p>Name</p><input placeholder="(first and last)" size="40"><br>
+        <p>Phone Number</p><input size="40"><br>
+        <p>Email</p><input size="40"><br>
+        <p id="painting">Preferred Painting Style (Don't worry if you don't see your painting style, just choose other!)</p>
           <select>
             <option value="">Abstract Art</option>
             <option value="">Surrealism</option>
@@ -23,11 +23,11 @@
             <option value="">Fauvism</option>
             <option value="">Other</option>
           </select><br>
-        <input placeholder="Upload your photo (not necessary)" size="40"><br>
-        <input placeholder="Link to your portfolio/website/social media" size="40"><br>
-        <input placeholder="Your preferred borough/neighborhood" size="40"><br>
-        <input placeholder="How did you find out about this project?" size="40"><br>
+        <p>Upload your photo</p><input placeholder="(not necessary)" size="40"><br>
+        <p>Link to your portfolio/website/social media</p><input placeholder="(not necessary)" size="40"><br>
+        <p>Your preferred borough/neighborhood</p><input placeholder="Ex.Bushwick, Brooklyn" size="40"><br>
+        <p>How did you find out about this project?</p><input size="40"><br>
       </div>
-      <p>Please be aware that your information will be made public to people those who wish to contact you for artistic purposes.</p>
+      <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
     </body>
 </html>
