HTML and CSS for the About page

--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
       <div class="pageBreak">
         <h1 id="moreAbout">More About Us...</h1>
         <ul>
-          <li><a href = "url">Who we are<a></li>
-          <li><a href = "url">Contact Us<a></li>
-          <li><a href = "url">Social Media<a></li>
-          <li><a href = "url">FAQs<a></li>
+          <li><a href = "about.html">Who we are<a></li>
+          <li><a href = "about.html">Contact Us<a></li>
+          <li><a href = "about.html">Social Media<a></li>
+          <li><a href = "about.html">FAQs<a></li>
       </div>
     </body>
 </html>
