Added quote to artist and owner pages

--- a/artist.html
+++ b/artist.html
@@ -10,7 +10,7 @@
         <p>Name</p><input placeholder="(first and last)" size="40"><br>
         <p>Phone Number</p><input size="40"><br>
         <p>Email</p><input size="40"><br>
-        <p id="painting">Preferred Painting Style (Don't worry if you don't see your painting style, just choose other!)</p>
+        <p id="painting">Preferred Painting Style <br>(Don't worry if you don't see your painting style, just choose other!)</p>
           <select>
             <option value="">Abstract Art</option>
             <option value="">Surrealism</option>
@@ -28,6 +28,7 @@
         <p>Your preferred borough/neighborhood</p><input placeholder="Ex.Bushwick, Brooklyn" size="40"><br>
         <p>How did you find out about this project?</p><input size="40"><br>
       </div>
+      <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
     </body>
 </html>
