--- a/owner.html
+++ b/owner.html
@@ -30,5 +30,6 @@
           <label for="No">I disagree</label>
         </div>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
+      <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
     </body>
 </html>
