Added submit button

--- a/artist.html
+++ b/artist.html
@@ -27,7 +27,8 @@
         <p>Link to your portfolio/website/social media</p><input placeholder="(not necessary)" size="40"><br>
         <p>Your preferred borough/neighborhood</p><input placeholder="Ex.Bushwick, Brooklyn" size="40"><br>
         <p>How did you find out about this project?</p><input size="40"><br>
-      </div>
+      </div><br>
+      <button>Submit</button>
       <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
     </body>
