--- a/owner.html
+++ b/owner.html
@@ -28,7 +28,8 @@
           <label for="Yes">I agree</label><br>
           <input type="checkbox" id="No">
           <label for="No">I disagree</label>
-        </div>
+        </div><br>
+      <button>Submit</button>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
       <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
     </body>
