--- a/artist.html
+++ b/artist.html
@@ -28,7 +28,7 @@
         <p>Your preferred borough/neighborhood</p><input placeholder="Ex.Bushwick, Brooklyn" size="40"><br>
         <p>How did you find out about this project?</p><input size="40"><br>
       </div><br>
-      <button>Submit</button>
+      <a href="artNotification.html"><button>Submit</button></a>
       <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
     </body>
