--- a/owner.html
+++ b/owner.html
@@ -29,7 +29,7 @@
           <input type="checkbox" id="No">
           <label for="No">I disagree</label>
         </div><br>
-      <button>Submit</button>
+      <a href="ownNotification.html"><button>Submit</button></a>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
       <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
     </body>
