Basic HTML for artist notification page

--- a/artNotification.html
+++ b/artNotification.html
@@ -4,6 +4,22 @@
         <link rel="stylesheet" type="text/css" href="artNotification.css">
     </head>
     <body>
-
+      <p>Thank you for signing up!<br>Come back here to know what's going on!</p><br>
+      <a href="url"><p>MY Profile</p></a>
+      <div class="wallImages">
+        <h1>Walls near you</h1><br>
+        <!-- these images of walls should be in a row, hover over them and click will take you to the wall details and how to contact the wall owner -->
+        <!-- the javascript should have their preferred locations -->
+          <img>
+          <img>
+          <img>
+      </div>
+      <div class="wallOwners">
+        <h1>Wall owners who are interested in your art and would like to contact you...</h1>
+          <!-- Each name should have it's profile picture as well -->
+          <a href="url">Jimmy Debt</a>
+          <a href="url">Cassie Anne</a>
+          <a href="url">Bob Stone</a>
+      </div>
     </body>
 </html>
