Improved page look (HTML and CSS)

--- a/artNotification.html
+++ b/artNotification.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" type="text/css" href="artNotification.css">
     </head>
     <body>
-      <p>Thank you for signing up!<br>Come back here to know what's going on!</p><br>
-      <a href="url"><p>MY Profile</p></a>
+      <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
+      <h1>Your Profile</h1><br>
+      <a href="url"><p>My Profile</p></a>
       <div class="wallImages">
         <h1>Walls near you</h1><br>
         <!-- these images of walls should be in a row, hover over them and click will take you to the wall details and how to contact the wall owner -->
@@ -19,9 +20,16 @@
       <div class="wallOwners">
         <h1>Wall owners who are interested in your art and would like to contact you...</h1>
           <!-- Each name should have it's profile picture as well -->
-          <a href="url">Jimmy Debt</a>
-          <a href="url">Cassie Anne</a>
-          <a href="url">Bob Stone</a>
+          <div id="profiles">
+            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png">
+            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png">
+            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/delivery_man.png">
+          </div>
+          <div id="profileName">
+            <a href="url">Jimmy Debt</a>
+            <a href="url">Cassie Anne</a>
+            <a href="url">Bob Stone</a>
+          </div>
       </div>
     </body>
 </html>
