Made header better

--- a/artNotification.html
+++ b/artNotification.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" type="text/css" href="artNotification.css">
     </head>
     <body>
-      <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
+      <div id="header">
+        <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
+      </div>
       <h1>Your Profile</h1><br>
       <a href="url"><p>My Profile</p></a>
       <div class="wallImages">
