Improved contacts (hover)

--- a/artNotification.html
+++ b/artNotification.html
@@ -22,16 +22,21 @@
       <div class="wallOwners">
         <h1>Wall owners who are interested in your art and would like to contact you...</h1>
           <!-- Each name should have it's profile picture as well -->
-          <div id="profiles">
-            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png">
-            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png">
-            <img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/delivery_man.png">
+          <div id="containers">
+          <div class="container">
+            <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" alt="Avatar" class="image" style="width:100%">
+            <div class="middle">
+              <a href="url"><div class="text">Jimmy Debt</div><a>
+            </div>
           </div>
-          <div id="profileName">
-            <a href="url">Jimmy Debt</a>
-            <a href="url">Cassie Anne</a>
-            <a href="url">Bob Stone</a>
+          <div class="container2">
+            <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" alt="Avatar2" class="image2" style="width:100%">
+            <div class="middle2">
+              <div class="text2">Cassie Anne</div>
+            </div>
           </div>
+        </div>
+
       </div>
     </body>
 </html>
