Did something weird so deleted

--- a/artNotification.html
+++ b/artNotification.html
@@ -26,7 +26,7 @@
           <div class="container">
             <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" alt="Avatar" class="image" style="width:100%">
             <div class="middle">
-              <a href="url"><div class="text">Jimmy Debt</div><a>
+              <div class="text">Jimmy Debt</div>
             </div>
           </div>
           <div class="container2">
