--- a/artNotification.html
+++ b/artNotification.html
@@ -26,13 +26,13 @@
           <div class="container">
             <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" alt="Avatar" class="image" style="width:100%">
             <div class="middle">
-              <div class="text">Jimmy Debt</div>
+              <a href="url"><div class="text">Jimmy Debt</div><a>
             </div>
           </div>
           <div class="container2">
             <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" alt="Avatar2" class="image2" style="width:100%">
             <div class="middle2">
-              <div class="text2">Cassie Anne</div>
+              <a href="url"><div class="text2">Cassie Anne</div><a>
             </div>
           </div>
         </div>
