--- a/ownNotification.html
+++ b/ownNotification.html
@@ -4,6 +4,34 @@
         <link rel="stylesheet" type="text/css" href="ownNotification.css">
     </head>
     <body>
+      <div id="header">
+        <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
+      </div>
+      <h1>Your Profile</h1><br>
+      <a href="ownProfile.css"><p>My Profile</p></a>
+      <h1>Artists near you</h1>
+      <div class="artInterest">
+        <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
+        <a href="url"><p>Barry Allen</p></a>
+      </div>
+      </div class="artInterest">
+      <div style="clear: left;">
+        <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" height="50" width="50" border="1px"></p>
+        <a href="url"><p>Oliver Queen</p></a>
+      </div>
+      <br><br>
 
+      <h1>Artists that would like to contact you...</h1>
+      <!--  -->
+      <div class="artInterest">
+        <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
+        <a href="url"><p>Eaobard Thawne</p></a>
+      </div class="artInterest">
+      <div style="clear: left;">
+        <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" height="50" width="50" border="1px"></p>
+        <a href="url"><p>Iris West</p></a>
+      </div>
+      <!--  -->
+      </div>
     </body>
 </html>
