--- a/ownProfile.html
+++ b/ownProfile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>HTML Starter Code</title>
+        <title>MVP Web App</title>
         <link rel="stylesheet" type="text/css" href="ownProfile.css">
     </head>
     <body>
