--- a/ownNotification.html
+++ b/ownNotification.html
@@ -8,7 +8,7 @@
         <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
       </div>
       <h1>Your Profile</h1><br>
-      <a href="ownProfile.css"><p>My Profile</p></a>
+      <a href="ownProfile.html"><p>My Profile</p></a>
       <h1>Artists near you</h1>
       <div class="artInterest">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
