Linked artist notification page to artist profile page

--- a/artNotification.html
+++ b/artNotification.html
@@ -8,7 +8,7 @@
         <h1 id="header1">Thank you for signing up!<br>Come back here to know what's going on!</h1><br>
       </div>
       <h1>Your Profile</h1><br>
-      <a href="url"><p>My Profile</p></a>
+      <a href="artProfile.css"><p>My Profile</p></a>
       <div class="wallImages">
         <h1>Walls near you</h1><br>
         <!-- these images of walls should be in a row, hover over them and click will take you to the wall details and how to contact the wall owner -->
