--- a/artNotification.html
+++ b/artNotification.html
@@ -26,13 +26,15 @@
           <div class="container">
             <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" alt="Avatar" class="image" style="width:100%">
             <div class="middle">
-              <a href="url"><div class="text">Jimmy Debt</div><a>
+              <a href="interest.html"><div class="text">Jimmy</div><a>
+              <!-- interest -->
             </div>
           </div>
           <div class="container2">
             <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" alt="Avatar2" class="image2" style="width:100%">
             <div class="middle2">
-              <a href="url"><div class="text2">Cassie Anne</div><a>
+              <a href="interest2.html"><div class="text2">Cassie Anne</div><a>
+              <!-- interest2 -->
             </div>
           </div>
         </div>
