--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       <h1>GET INVOLVED:</h1>
       <p>I am an <a href = "artist.html">Artist<a></p>
       <p>I am an <a href = "owner.html">Owner<a></p>
-      <p><a href="url">Sign In</a></p>
+      <p><a href="signIn.html">Sign In</a></p>
       <div class="pageBreak">
         <h1 id="moreAbout">More About Us...</h1>
         <ul>
