--- a/ownNotification.html
+++ b/ownNotification.html
@@ -12,12 +12,14 @@
       <h1>Artists near you</h1>
       <div class="artInterest">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
-        <a href="url"><p>Barry Allen</p></a>
+        <a href="url"><p>Jason</p></a>
+        <!-- interest3 -->
       </div>
       </div class="artInterest">
       <div style="clear: left;">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" height="50" width="50" border="1px"></p>
-        <a href="url"><p>Oliver Queen</p></a>
+        <a href="url"><p>Casey</p></a>
+        <!-- interest4 -->
       </div>
       <br><br>
 
@@ -25,11 +27,11 @@
       <!--  -->
       <div class="artInterest">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
-        <a href="url"><p>Eaobard Thawne</p></a>
+        <a href="url"><p>Edward</p></a>
       </div class="artInterest">
       <div style="clear: left;">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" height="50" width="50" border="1px"></p>
-        <a href="url"><p>Iris West</p></a>
+        <a href="url"><p>Iris</p></a>
       </div>
       <!--  -->
       </div>
