--- a/ownNotification.html
+++ b/ownNotification.html
@@ -26,11 +26,11 @@
       <h1>Artists that would like to contact you...</h1>
       <div class="artInterest">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png" height="50px" width="50px" border="1px"></p>
-        <a href="url"><p>Edward</p></a>
+        <a href="interest3.html"><p>Edward</p></a>
       </div class="artInterest">
       <div style="clear: left;">
         <p style="float: left;"><img class="profileImg" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businesswoman2.png" height="50" width="50" border="1px"></p>
-        <a href="url"><p>Iris</p></a>
+        <a href="interest4.html"><p>Iris</p></a>
       </div>
       <!--  -->
       </div>
