--- a/interest3.html
+++ b/interest3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
     <head>
-        <title>HTML Starter Code</title>
+        <title>MVP Web App</title>
         <link rel="stylesheet" type="text/css" href="interest3.css">
     </head>
     <body>
-      
+
     </body>
 </html>
