--- a/interest4.html
+++ b/interest4.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>HTML Starter Code</title>
+        <title>MVP Web App</title>
         <link rel="stylesheet" type="text/css" href="interest4.css">
     </head>
     <body>
