created javascript for artist profile page and linked

--- a/artProfile.html
+++ b/artProfile.html
@@ -32,5 +32,6 @@
           <input type="submit">
         </form>
         <!--  -->
+      <script src="artProfile.js"></script>
     </body>
 </html>
