Saved artist info to local storage

--- a/artist.html
+++ b/artist.html
@@ -12,17 +12,17 @@
         <p>Phone Number</p><input class="phoneNumber" size="40"><br>
         <p>Email</p><input class="user-email" size="40"><br>
         <p id="painting">Preferred Painting Style <br>(Don't worry if you don't see your painting style, just choose other!)</p>
-          <select id="paintStyle">
-            <option value="">Abstract Art</option>
-            <option value="">Surrealism</option>
-            <option value="">Conceptual Art</option>
-            <option value="">Pop Art</option>
-            <option value="">Photorealism</option>
-            <option value="">Minimalism</option>
-            <option value="">Futurism</option>
-            <option value="">Impressionism</option>
-            <option value="">Fauvism</option>
-            <option value="">Other</option>
+          <select class="paintStyle">
+            <option value="Abstract Art">Abstract Art</option>
+            <option value="Surrealism">Surrealism</option>
+            <option value="Conceptual Art">Conceptual Art</option>
+            <option value="Pop Art">Pop Art</option>
+            <option value="Photorealism">Photorealism</option>
+            <option value="Minimalism">Minimalism</option>
+            <option value="Futurism">Futurism</option>
+            <option value="Impressionism">Impressionism</option>
+            <option value="Fauvism">Fauvism</option>
+            <option value="Other">Other</option>
           </select><br>
         <p>Upload your profile photo (not necessary):</p>
 
