Local storage to profile

--- a/artProfile.html
+++ b/artProfile.html
@@ -15,12 +15,12 @@
         </div>
       </div>
       <div id="details">
-        <p>Your location: Bushwick, Brooklyn<p>
-        <p>Username: email@gmail.com</p><br>
+        <p>Your location:<span class="location"> Bushwick, Brooklyn</span><p>
+        <p>Username:<span class="email"> email@gmail.com</span></p><br>
         <p>Contact Info:<br>
-        Name: Ar Tist<br>
-        Phone #: (123)456-7890<br>
-        Email: email@gmail.com
+        Name:<span class="name"> Ar Tist</span><br>
+        Phone #:<span class="phoneNumber"> (123)456-7890</span><br>
+        Email:<span class="email"> email@gmail.com</span>
         </p>
         <a href="url"><p>Change Contact Info?</p></a>
         <a href="url"><p>Change Password?</p></a>
