Fixed checkbox functionality

--- a/owner.html
+++ b/owner.html
@@ -24,10 +24,10 @@
       </div>
       <p>As owner of the wall located on ______, I give consent to artists to paint on my wall and hereby release and hold harmless this organiztion from any and all liability in connection with damages or potential problems due to their work at ______. </p>
         <div>
-          <input type="checkbox" id="Yes">
-          <label for="Yes">I agree</label><br>
-          <input type="checkbox" id="No">
-          <label for="No">I disagree</label>
+          <form action="">
+            <input type="radio" name="option" value="agree"> I agree<br>
+            <input type="radio" name="option" value="disagree"> I disagree<br>
+          </form>
         </div><br>
       <a href="ownNotification.html"><button>Submit</button></a>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
