Created README.md file

--- a/owner.html
+++ b/owner.html
@@ -7,9 +7,9 @@
       <h1>I am a Wall Owner</h1>
       <p>Please provide your contact information so other supporters of this cause can get in touch with you.</p>
       <div class="input">
-        <p>Name</p><input placeholder="(first and last)" size="40"><br>
-        <p>Phone Number</p><input size="40"><br>
-        <p>Email</p><input size="40"><br>
+        <p>Name</p><input class="name" placeholder="(first and last)" size="40"><br>
+        <p>Phone Number</p><input classs="phoneNumber" size="40"><br>
+        <p>Email</p><input class="email" size="40"><br>
         <p>Location of Wall</p><input placeholder="Ex.201 Art St, Brooklyn, NY" size="40"><br>
         <p>Upload your photo of the wall</p><input placeholder="(not necessary)" size="40"><br>
         <p>Documentation proving you own the wall</p>
@@ -17,9 +17,7 @@
             <label for="file">Choose file to upload</label>
             <input type="file" id="file" name="file" multiple>
           </div>
-          <div>
-            <button>Submit</button>
-          </div>
+          
         <p>Any additional information?</p><textarea id="info" size="40"></textarea><br>
       </div>
       <p>As owner of the wall located on ______, I give consent to artists to paint on my wall and hereby release and hold harmless this organiztion from any and all liability in connection with damages or potential problems due to their work at ______. </p>
