--- a/owner.html
+++ b/owner.html
@@ -16,12 +16,7 @@
         <p><input type="file" class="upload-image"></p>
         <div><img src="" class="image-preview"></div>
 
-        <p>Documentation proving you own the wall</p>
-          <div id="fileUpload">
-            <label for="file">Choose file to upload</label>
-            <input type="file" id="file" name="file" multiple>
-          </div>
-
+        <p>You will have to email documentation proving you own the wall</p>
         <p>Any additional information?</p><textarea id="info" size="40"></textarea><br>
       </div>
       <p>As owner of the wall located on ______, I give consent to artists to paint on my wall and hereby release and hold harmless this organiztion from any and all liability in connection with damages or potential problems due to their work at ______. </p>
@@ -31,7 +26,7 @@
             <input type="radio" name="option" value="disagree"> I disagree<br>
           </form>
         </div><br>
-      <a><button class="submit" >Submit</button></a>
+      <a><button class="submit">Submit</button></a>
       <p class="error"></p>
       <p>Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
       <p id="quote">The greatness of a community is most accurately measured by the compassionate actions of its members - Coretta Scott King</p>
