Improved  owner profile page

--- a/ownProfile.html
+++ b/ownProfile.html
@@ -12,22 +12,15 @@
         </div>
       </div>
       <div id="details">
-        <p>Your location: Bushwick, Brooklyn<p>
-        <p>Username: email@gmail.com</p><br>
-        <p>Contact Info:<br>
-        Name: Ow Ner<br>
-        Phone #: (123)456-7890<br>
-        Email: email@gmail.com
-        </p>
+        <p><span class="pTags">Your location:</span><span class="location">Bushwick, Brooklyn</span><p>
+        <p><span class="pTags">Username:</span><span class="email">email@gmail.com</span></p>
+        <p><span class="pTags">Contact Info:</span></p>
+        <p><span class="pTags">Name:</span><span class="name">Ow Ner</span></p>
+        <p><span class="pTags">Phone Number:</span><span class="phoneNumber">(123)456-7890</span></p>
+        <p><span class="pTags">Email:</span><span class="email">email@gmail.com</span></p>
         <a href="url"><p>Change Contact Info?</p></a>
         <a href="url"><p>Change Password?</p></a>
       </div>
-        <!-- Not Necessary? To uploa dimage or file -->
-        <!-- https://www.w3schools.com/tags/att_input_accept.asp -->
-        <form action="/action_page.php">
-          <input type="file" name="pic" accept="image/*">
-          <input type="submit">
-        </form>
-        <!--  -->
+        <script src="ownProfile.js"></script>
     </body>
 </html>
