Made contact info a heading

--- a/ownProfile.html
+++ b/ownProfile.html
@@ -14,7 +14,7 @@
       <div id="details">
         <p><span class="pTags">Your location:</span><span class="location">Bushwick, Brooklyn</span><p>
         <p><span class="pTags">Username:</span><span class="email">email@gmail.com</span></p>
-        <p><span class="pTags">Contact Info:</span></p>
+        <h3><span class="pTags">Contact Info:</span></h3>
         <p><span class="pTags">Name:</span><span class="name">Ow Ner</span></p>
         <p><span class="pTags">Phone Number:</span><span class="phoneNumber">(123)456-7890</span></p>
         <p><span class="pTags">Email:</span><span class="email">email@gmail.com</span></p>
