Cannot go onto next page if no wall picture is uploaded

--- a/ownProfile.html
+++ b/ownProfile.html
@@ -19,6 +19,10 @@
         <p><span class="pTags">Phone Number:</span><span class="phoneNumber">(123)456-7890</span></p>
         <p><span class="pTags">Email:</span><span class="email">email@gmail.com</span></p>
       </div>
+      <h3>Street Artists</h3>
+      <div id="artistsWrapper">
+        <a class"artistLink" href="artProfile.html" >Fernando Garcia</a>
+      </div>
         <script src="ownProfile.js"></script>
     </body>
 </html>
