Linked owner profile to artist dummy data

--- a/ownProfile.html
+++ b/ownProfile.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Street Artists</h3>
       <div id="artistsWrapper">
-        <a class"artistLink" href="artProfile.html" >Fernando Garcia</a>
+        <a href="dummy.html">Fernando Garcia</a>
       </div>
         <script src="ownProfile.js"></script>
     </body>
