Renamed pages to Street Talk

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>MVP Web App</title>
+        <title>Street Talk</title>
         <link rel="stylesheet" type="text/css" href="about.css">
     </head>
     <body>
