--- a/dummy.html
+++ b/dummy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>MVP Web App</title>
+        <title>Street Talk</title>
         <link rel="stylesheet" type="text/css" href="dummy.css">
     </head>
     <body>
@@ -9,7 +9,7 @@
         <img src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png">
       </div>
       <div>
-      <p>Link to your portfolio/website/social media:<a href= 'url' class="portfolio"> Portfolio link</a></p>
+      <p>Link to your portfolio/website/social media:<a href= 'https://www.youtube.com/' class="portfolio"> Portfolio link</a></p>
       </div>
       <div>
         <p>Your location: Bushwick, Brooklyn<p>
