--- a/artist.html
+++ b/artist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>MVP Web App</title>
+        <title>Street Talk</title>
         <link rel="stylesheet" type="text/css" href="artist.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
