Added small comment about email at bottom for artist profile page

--- a/artProfile.html
+++ b/artProfile.html
@@ -20,6 +20,9 @@
         Email:<span class="email"> email@gmail.com</span>
         </p>
       </div>
+      <h1>Thank you for signing up!</h1>
+      <h1>You will get a weekly email about wall owners around you.</h1>
+      <h1>Thank you for taking part in this cause!</h1>
       <script src="artProfile.js"></script>
     </body>
 </html>
