Added small comment about email at bottom for wall owner profile page

--- a/ownProfile.html
+++ b/ownProfile.html
@@ -20,9 +20,9 @@
         <p><span class="pTags">Email:</span><span class="email">email@gmail.com</span></p>
       </div>
       <h3>Street Artists</h3>
-      <div id="artistsWrapper">
-        <a href= "dummy.html">Artist Prototype</a>
-      </div>
+      <h1>Thank you for signing up!</h1>
+      <h1>You will get a weekly email about artists around you.</h1>
+      <h1>Thank you for taking part in this cause!</h1>
         <script src="ownProfile.js"></script>
     </body>
 </html>
