Made home page look better

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-    <head>
-        <title>Street Talk</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-    </head>
-    <body>
+<html>
+  <head>
+    <title>Street Talk</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <nav class="navbar">
+      <a class="navbar-brand" href="index.html">
+        <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
+      </a>
+    </nav>
+    <div class="header">
+      <img class="header-image" src="http://www.trbimg.com/img-5a14a5d4/turbine/fl-sb-hollywood-murals-street-art-20171103" class="img-fluid">
+      <div class="title">
+        <h1>We connect artists to</h1>
+        <h1>communities</h1>
+        <div class="buttons">
+          <p><button type="button" class="btn btn-outline-light"><a class="buttonA" href="artist.html">I am an artist</button></a></p>
+          <p><button type="button" class="btn btn-outline-light"><a class="buttonA" href="owner.html">I am a wall owner</button></a></p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
       <div class="container">
-        <img src="http://www.trbimg.com/img-5a14a5d4/turbine/fl-sb-hollywood-murals-street-art-20171103" alt="Norway" style="width:100%;">
-        <div class="centered">We connect artists to communities.</div>
+        <p>Made with ❤️ in Brooklyn by Marco Garcia Nueva</p>
+        <p>Contact me <a href="about.html">here</a></p>
       </div>
-      <p id="desc">Many times, artists, owners, and communities can't connect.
-        This deters the development and presence of street are in communities which demand it.
-      </p>
-      <h1>GET INVOLVED:</h1>
-      <p>I am an <a href = "artist.html">Artist<a></p>
-      <p>I am an <a href = "owner.html">Owner<a></p>
-      <p><a href="signIn.html">Sign In</a></p>
-      <div class="pageBreak">
-        <h1 id="moreAbout">More About Us...</h1>
-        <ul>
-          <li><a href = "about.html">Who we are<a></li>
-          <li><a href = "about.html">Contact Us<a></li>
-          <li><a href = "about.html">Social Media<a></li>
-          <li><a href = "about.html">FAQs<a></li>
-      </div>
-    </body>
+    </div>
+  </body>
 </html>
