--- a/artist.html
+++ b/artist.html
@@ -12,19 +12,8 @@
         <p>Last Name</p><input name="lastName" class="user-last-name" placeholder="(last)" size="40"><br>
         <p>Phone Number</p><input name="phoneNumber" class="phoneNumber" size="40"><br>
         <p>Email</p><input name="email" class="user-email" size="40"><br>
-        <p id="painting">Preferred Painting Style <br>(Don't worry if you don't see your painting style, just choose other!)</p>
-          <select class="paintStyle" name="preferStyle">
-            <option value="Abstract Art">Abstract Art</option>
-            <option value="Surrealism">Surrealism</option>
-            <option value="Conceptual Art">Conceptual Art</option>
-            <option value="Pop Art">Pop Art</option>
-            <option value="Photorealism">Photorealism</option>
-            <option value="Minimalism">Minimalism</option>
-            <option value="Futurism">Futurism</option>
-            <option value="Impressionism">Impressionism</option>
-            <option value="Fauvism">Fauvism</option>
-            <option value="Other">Other</option>
-          </select><br>
+        <p> Preferred Painting Style</p><input name="paintStyle" class="paintStyle" placeholder="ex.Surrealism" size="40">
+
         <p>Upload your profile photo (not necessary):</p>
 
         <p><input type="file" class="upload-image"></p>
